# 100_Days_of_Codding_Python

./: cardgenerator.py  main.py  pyproject.toml  test  test.py
1_100__Days/Day_1/: band_name_generator.py  first.py  input.py  variable.py  variable_naming.py
1_100__Days/Day_10/: calculator.py  function_with_return.py  tempCodeRunnerFile.py
1_100__Days/Day_11/: Blackjack.py  art.py  new.py  tempCodeRunnerFile.py  test.py
1_100__Days/Day_12/: block_scope.py  global_variable.py  number_guessing_game.py  scope.py
1_100__Days/Day_13/: debugger.py  debuging.py
1_100__Days/Day_14/: art.py  data.py  higher_lower_game.py
1_100__Days/Day_15/: art.py  coffee_machine.py
1_100__Days/Day_16/: OOPs_examples.py
1_100__Days/Day_17/: main.py
1_100__Days/Day_18/: color.py  main.py
1_100__Days/Day_19/: sketch.py  turtle_race.py
1_100__Days/Day_2/: Mathematical_operator.py  TypeError__check_type__type_converstion.py  manuplating_rounding_number.py  primitive_data_type.py  tempCodeRunnerFile.py  tip_calculator.py
1_100__Days/Day_20/: food.py  main.py  scoreboard.py  snake.py
1_100__Days/Day_21/: class_inheritance.py
1_100__Days/Day_22/: ball.py  main.py  paddle.py  scoreboard.py  tempCodeRunnerFile.py
1_100__Days/Day_23/: car_manager.py  main.py  scoreboard.py
1_100__Days/Day_24/: invitation_letter.txt  letter_for_Aman.txt  letter_for_Govind.txt  letter_for_Manas.txt  letter_for_Ratan.txt  letter_for_Rohan.txt  letter_main.py  main.py  my_file.txt  name.txt
1_100__Days/Day_25/: main.py  new_data.csv  pandas_learn.py  tempCodeRunnerFile.py
(+71 files in other folders)
